# ergo

./: README.md  chat.py  chunk_data.py  database.py  embedding.py  main.py  pyproject.toml  read_wikipedia.py  search.py
chunks/: Software_engineering-2025-06-25.json
data/: History-2025-06-25.json  Systems_thinking-2025-06-25.json
raw_data/: History-2025-06-25.json  Learning-2025-06-25.json  Learning.json  Mathematics-2025-06-25.json  Software_engineering-2025-06-25.json  preview.json
src/: chat.py  database.py  generate_chunks.py  index_chunks.py  read_wikipedia.py  search.py  sentence_parser.py
tests/: test_read_wikipedia.py  test_sentence_parser.py
